apps/fastapi/manifests/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
  namespace: fastapi
spec:
  selector:
    app: fastapi
  ports:
  - name: http
    port: 80
    targetPort: 8000
